backend/k8s/api-gateway-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: auction-system
spec:
  replicas: 1
  selector:
    matchLabels: { app: api-gateway }
  template:
    metadata: { labels: { app: api-gateway } }
    spec:
      containers:
      - name: api-gateway
        image: ankur2k19/api-gateway:latest
        imagePullPolicy: Always
        ports: [{ containerPort: 8000, name: http }]
---
# apiVersion: v1
# kind: Service
# metadata: { name: api-gateway-svc, namespace: auction-system }
# spec:
#   type: ClusterIP
#   selector: { app: api-gateway }
#   ports: [{ port: 80, targetPort: 8000, name: http }]
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  namespace: auction-system
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 80
      targetPort: 8000
      nodePort: 31001  # You choose the nodePort

# apiVersion: v1
# kind: Service
# metadata:
#   name: api-gateway-svc
#   namespace: auction-system
# spec:
#   selector:
#     app: api-gateway
#   ports:
#     - name: http
#       port: 80
#       targetPort: 8000
